--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\luise\\miniconda3\\envs\\beek\\python.exe"
+    "python.pythonPath": "C:\\Users\\luise\\.conda\\envs\\GraphDash\\python.exe"
 }
