--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.0.1
 colorama==0.4.4
 dash==1.20.0
 dash-core-components==1.16.0
+dash-cytoscape==0.3.0
 dash-html-components==1.1.3
 dash-renderer==1.9.1
 dash-table==4.11.3
